examples/reference/macro_cross_module_error.err
Assembly failed:
24: ERROR [asm402]
   24 |     .EMIT_PAIR $AA, $BB ; ERROR: EMIT_PAIR not imported
                        ^
ERROR: No instruction found for .EMIT_PAIR
